# Ponderadas-M06

Ponderada Semana 02/: README.md  pyproject.toml  requirements.txt
Ponderada Semana 02/configs/: baseline.yaml
Ponderada Semana 02/experiments/results/: best_config.json  results.csv  test_metrics.json
Ponderada Semana 02/scripts/: run_experiments.py
Ponderada Semana 02/src/sentiment_pipeline/: __init__.py  classification.py  pipeline.py  preprocessing.py  utils.py  vectorization.py
Ponderada Semana 02/streamlit_app/: app.py
Ponderada Semana 05 (Casa)/: README.md  requirements.txt
Ponderada Semana 05 (Casa)/models/: b2w_model.keras  b2w_model.pkl  imdb_model.keras  imdb_model.pkl
Ponderada Semana 05 (Casa)/notebooks/: b2w_text_classification.ipynb  imdb_text_classification_tutorial.ipynb
