[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-pipeline"
version = "0.1.0"
description = "Configurable sentiment analysis pipeline with preprocessing, vectorization, and classic models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "nltk>=3.8",
  "spacy>=3.7",
  "emoji>=2.10",
  "gensim>=4.3",
  "lightgbm>=4.3",
  "pyyaml>=6.0",
  "streamlit>=1.31",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]
